# SLM-Slicer

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  CMakePresets.json  README.md  build_debug.bat  build_debug.ps1  resources.qrc
Models/: MotorStator.ini  MotorStator_lower.stl  MotorStator_upper.stl  bridge2.3mf  bridge2.ini  bridge2_lower.stl  bridge2_upper.stl  marc.ini  marc_build_config.json
cmake/: Version.cmake
core/: CMakeLists.txt
core/application/: Result.h
core/application/interfaces/: IModelRenderer.h  IStlFileLoader.h
core/application/usecases/: AddModelUseCase.cpp  AddModelUseCase.h
core/domain/: BoundingBox.h  BuildPlate.cpp  BuildPlate.h  Model.cpp  Model.h  Transform.h
docs/: IntegrationExample.cpp
infrastructure/: BuildVolumeVisualizer.h  CMakeLists.txt  CollisionVisualizer.cpp  CollisionVisualizer.h  MarcDllAdapter.cpp  MarcDllAdapter.h  VtkModelRenderer.cpp  VtkModelRenderer.h  VtkStlFileLoader.cpp  VtkStlFileLoader.h
installer/: CMakeLists.txt
marc_qtsrc/: ConfigDialog.cpp  ConfigDialog.h  CustomInteractorStyle.cpp  CustomInteractorStyle.h  CustomInteractorStyle1.cpp  CustomVTKWidget.h  LayerViewer.cpp  LayerViewer.h  Main.cpp  MarcAPIInterface.h  MarcAPIManager.hpp  MarcUtils.hpp  OrientationOptimizer.cpp  OrientationOptimizer.h  OrientationOptimizerInterface.cpp  OrientationOptimizerInterface.h  ReadSvg.cpp  ReadSvg.h  StlLoader.cpp  StlLoader.h  StlViewer.cpp  StlViewer.h  SvgLoaderWorker.cpp  SvgLoaderWorker.h  commons.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow2.cpp  mainwindow_refactored.cpp  mainwindow_refactored_temp.cpp  msvc_mingw_compat.h  resources.qrc  slmcommons.h  toDllFromDll.h  xxxmainwindow.ui
presentation/: CMakeLists.txt  MainWindowViewModel.cpp  MainWindowViewModel.h  ModelListWidget.cpp  ModelListWidget.h  PropertiesPanel.cpp  PropertiesPanel.h
qtsrc/: mainwindow.cpp
